complete index layout

--- a/components.jade
+++ b/components.jade
@@ -12,20 +12,20 @@ body
       .link-img_img-wrap
         .link-img_img(style="background-image:url('images/test-1.jpg');")
       .link-img_text
-        h3.link-img_title 新闻标题
-        p.link-img_desc 新闻描述描述描述描述描述描述描述描述描述描述
+        h3.link-img_title 新闻标题标题标题标题标题
+        p.link-img_desc 新闻描述描述描述描述描述描述描述描述描述描述述描述描述描述描述描述述描述描述描述描述描述述描述描述描述描述描述述描述描述描述描述描述
   section.btns.mt2.clearfix
     button.btn 按钮
     a.btn(href ="#") 我是按钮
     input.btn(type="button" value="我也是按钮")
-    button.btn.btn-no-shadow 我没有阴影
+    button.btn.btn-shadow 我有阴影
     button.btn.btn-no-radius 我没有圆角
-    button.btn.btn-no-radius.btn-no-shadow 我没有圆角也没有阴影
-    button.btn.btn.btn-green 我变色了
+    button.btn.btn-no-radius.btn-shadow 我没有圆角但有阴影
+    a.link-rect(href ="#") 出国留学帮
 
   section.link-squares.mt2.clearfix
     a.link-square.bg-red
-      i.fa.fa-bug.fa-2x.link-square_icon
+      i.fa.fa-trophy.fa-2x.link-square_icon
       h4.link-square_desc 挑战杯
     a.link-square.bg-orange
       i.fa.fa-laptop.fa-2x.link-square_icon
@@ -67,6 +67,9 @@ body
       .before 挑战杯
       .after
         i.fa.fa-bug.fa-3x
+  section.clearfix.sec-arrow
+    button.arrow
+    button.arrow.right
   footer.footer
 
 
