--- a/css/components.css
+++ b/css/components.css
@@ -1,6 +1,3 @@
-body {
-  background-color: #6f689a;
-}
 section {
   margin: 20px;
 }
@@ -21,4 +18,7 @@ section {
 .link-square-featured {
   float: left;
   margin: 10px;
+}
+.sec-arrow {
+  background-color: #45a59a;
 }
