--- a/css/components.less
+++ b/css/components.less
@@ -1,5 +1,5 @@
 body {
-  background-color: #6f689a;
+  //background-color: #6f689a;
 }
 section {
   margin: 20px;
@@ -25,5 +25,9 @@ section {
 .link-square-featured {
   float: left;
   margin: 10px;
+}
+
+.sec-arrow {
+  background-color: #45a59a;
 }
 
