--- a/index.jade
+++ b/index.jade
@@ -98,59 +98,79 @@ body
             .link-img_text
               h3.link-img_title 新闻三标题
               p.link-img_desc 新闻描述描述描述描述描述描述描述
-  section.youth-league.clearfix
+  section.notice.clearfix
+    h2.f8.c-grey-2.tc 公告
+      span.c-grey-4.fl.ml1 NOTICE
+    .container
+      .row
+        .l-5.m-5.s-6.x-8.l-offset-1.m-offset-1.s-offset-0.x-offset-2
+          ul.notice-list
+            li
+              a 关于在四川大学各级团组织和广大团员青年中学习宣传贯彻共产党的群团工作精神的通知
+            li
+              a 关于开展学习习近平总总书记在庆祝中国共产党成立95周年大会上的重要讲话专题团组织生
+            li
+              a 关于组织开展"挑战杯"四川大学2016年大学生课外学术科技作品竞赛和首批立项申报的通知
+            li
+              a 关于开展2016年暑期社会实践活动之"甘庆川交界地区优惠政策落实情况"调研活动通知
+        .l-5.m-5.s-6.x-8.l-offset-0.m-offset-0.s-offset-0.x-offset-2
+          ul.notice-list
+            li
+              a 关于补招四川大学团委宣传部川大人报社学生干部的通知
+            li
+              a 关于组织学生参加第十届成都青年创业大赛的通知
+            li
+              a 关于补招四川大学团委宣传部川大人报社学生干部的通知
+            li
+              a 关于组织学生参加第十届成都青年创业大赛的通知
+    .mt3.tc
+      a.btn.mauto 更多公告
+  section.youth-league.pt5.clearfix
     h2.f8.tc 川大团委
-      span.op5.fl ABOUT US
+      span.op5.fl.ml1 ABOUT US
+    button.arrow.left
+    button.arrow.right
     .container
       .row
         section.l-8.m-10.s-12.x-12.l-offset-2.m-offset-1.s-offset-0.x-offset-0
           h3.f5.tc.group-name 四川大学青年传媒
-          p.tc.group-into 四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍
-  section.notice.clearfix.container
-    h2.f8.c-grey-2.tc 公告
-      span.c-grey-4.fl.ml1 NOTICE
-    .row
-      .l-5.m-5.s-6.x-8.l-offset-1.m-offset-1.s-offset-0.x-offset-2
-        ul.notice-list
-          li
-            a 公告一公告一公告一公告一公告一公告一公告一公告一公告一公告一公告一公告一公告一
-          li
-            a 公告二公告二公告二公告二公告二公告二公告二公告二公告二公告二公告二公告二公告二公告二公告二
-          li
-            a 公告三公告三公告三公告三公告三公告三公告三公告三公告三公告三公告三公告三公告三公告三公告三公告三公告三公告三
-          li
-            a 公告四公告四公告四公告四公告四公告四公告四公告四公告四公告四公告四
-      .l-5.m-5.s-6.x-8.l-offset-0.m-offset-0.s-offset-0.x-offset-2
-        ul.notice-list
-          li
-            a 公告一公告一公告一公告一公告一公告一公告一公告一公告一公告一公告一公告一公告一
-          li
-            a 公告二公告二公告二公告二公告二公告二公告二公告二公告二公告二公告二公告二公告二公告二公告二
-          li
-            a 公告三公告三公告三公告三公告三公告三公告三公告三公告三公告三公告三公告三公告三公告三公告三公告三公告三公告三
-          li
-            a 公告四公告四公告四公告四公告四公告四公告四公告四公告四公告四公告四
-  section.student-ground.container
-    h2.c-grey-2 学生园地
-    .row
-      .l-6.m-6.s-6.x-6
-        ul.message-list
-          li
-            a 公告一公告一公告一公告一公告一公告一公告一公告一公告一公告一公告一公告一公告一
-          li
-            a 公告二公告二公告二公告二公告二公告二公告二公告二公告二公告二公告二公告二公告二公告二公告二
-          li
-            a 公告三公告三公告三公告三公告三公告三公告三公告三公告三公告三公告三公告三公告三公告三公告三公告三公告三公告三
-          li
-            a 公告四公告四公告四公告四公告四公告四公告四公告四公告四公告四公告四
-      .l-6.m-6.s-6.x-6
-        ul.category-list
-          li
-            a 实习兼职帮
-          li
-            a 出国留学帮
-          li
-            a 创新创业帮
+          p.tc.group-into 四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍
+          p.tc.group-into 四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍
+          p.tc.group-into 四川大学青年传媒的介绍四川大学青年传媒的介绍
+  section.student-ground
+    h2.f8.c-grey-2.tc 学生园地
+      span.c-grey-4.fl.ml1 STUDENT
+    .container
+      .row
+        .l-6.m-6.s-6.x-10.l-offset-1.m-offset-1.s-offset-0.x-offset-1
+          .notice-wrap.clearfix
+            ul.notice-list
+              li
+                a
+                  h3.title 华西药学院第22届分团委学生会表彰大会
+                  p.info 6月3日下午3点法学院报告厅
+              li
+                a
+                  h3.title 第十四届"半夏的纪念"北京(国际)大学生影像展四川大学站
+                  p.info 6月3日下午3点法学院报告厅
+              li
+                a
+                  h3.title 第十四届"半夏的纪念"北京(国际)大学生影像展四川大学站宣传活动
+                  p.info 6月3日下午3点法学院报告厅
+              li
+                a
+                  h3.title 文学与新闻学院艺术型社团王炎龙教授茶座
+                  p.info 2016年5月30日15时50分 第一教学楼A座
+        .l-4.m-4.s-6.x-12
+          ul.category-list
+            li.pb2
+              a.link-rect.warn 实习兼职帮
+            li.pb2
+              a.link-rect 出国留学帮
+            li
+              a.link-rect.action 创新创业帮
+      .tc
+        .a.btn(href="#") 更多
 
   footer.footer.clearfix.c-w
     .container
